# Comments

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: action.yaml  build_and_push_api.yaml  build_and_push_front.yaml
backend/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml
backend/comments/: models.py  serializers.py  urls.py  validators.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_rename_user_name_comment_username_comment_avatar_url.py  0003_remove_comment_avatar_url_remove_comment_image_and_more.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
deploy/: .env  docker-compose.yml  nginx.conf
frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  CommentForm.css  CommentForm.jsx  CommentList.css  CommentList.jsx
frontend/src/components/: CommentForm.css  CommentForm.jsx  CommentList.css  CommentList.jsx  ShowImage.css  ShowImage.jsx  utils.js
frontend/src/components/ReplyButton/: ReplyButton.css  ReplyButton.jsx
frontend/src/components/utils/: resizeImage.js  validateTags.js  validateURL.js
